# middleware

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  deploy_middleware_instance.sh  dfx.json  package-lock.json  package.json  webpack.config.js
src/middleware/: Cargo.toml  middleware.did
src/middleware/src/: lib.rs  memory.rs
src/middleware/src/methods/: canister.rs  middleware_instance_canister.rs  mod.rs
src/middleware/src/migrations/: mod.rs
src/middleware/src/types/: custom_return_types.rs  errors.rs  middleware_instance.rs  mod.rs
src/middleware/src/utils/: address.rs  canister.rs  macros.rs  memory.rs  mod.rs  nat.rs  time.rs
src/middleware_instance_example/: Cargo.toml  middleware_instance_example.did
src/middleware_instance_example/src/: lib.rs
