[package]
name = "middleware_instance_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "=0.11.4"
serde_cbor = "0.11.2"
# ethabi = { version = "17.0.0", no-default-features = true, features = [
#     "serde",
# ] }
candid = "0.9.6"

ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", version = "0.1.3" }
